--- a/leaderboards.html
+++ b/leaderboards.html
@@ -203,6 +203,16 @@
   setInterval(loadLeaderboard, 15000);
 </script>
 
+!-- 📊 Analytics Section -->
+  <section class="py-12">
+    <div class="container mx-auto px-6">
+      <div class="bg-gray-800 rounded-xl p-6 shadow-lg mb-12">
+        <h3 class="text-2xl font-bold mb-6">Class Average Combat Power</h3>
+        <div class="h-96">
+          <canvas id="classAvgChart"></canvas>
+        </div>
+      </div>
+
 <script>
   // --- 📊 Charts for Analytics ---
   async function loadAnalytics() {
