--- a/leaderboards.html
+++ b/leaderboards.html
@@ -203,7 +203,7 @@
   setInterval(loadLeaderboard, 15000);
 </script>
 
-!-- 📊 Analytics Section -->
+<!-- 📊 Analytics Section -->
   <section class="py-12">
     <div class="container mx-auto px-6">
       <div class="bg-gray-800 rounded-xl p-6 shadow-lg mb-12">
