--- a/leaderboards.html
+++ b/leaderboards.html
@@ -213,91 +213,102 @@
         </div>
       </div>
 
-<script>
-  // --- 📊 Charts for Analytics ---
-  async function loadAnalytics() {
-    const snapshot = await membersRef.get();
-    const members = snapshot.docs.map(doc => doc.data());
-    if (!members.length) return;
+      <div class="bg-gray-800 rounded-xl p-6 shadow-lg">
+        <h3 class="text-2xl font-bold mb-6">Guild Weekly CP Growth (Last 4 Weeks)</h3>
+        <div class="h-96">
+          <canvas id="weeklyGrowthChart"></canvas>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    // ----- Class Average CP -----
-    const classGroups = {};
-    members.forEach(m => {
-      if (!classGroups[m.class]) classGroups[m.class] = [];
-      classGroups[m.class].push(m.cp || 0);
-    });
+  <script>
+    // --- 📊 Charts for Analytics ---
+    async function loadAnalytics() {
+      const snapshot = await membersRef.get();
+      const members = snapshot.docs.map(doc => doc.data());
+      if (!members.length) return;
 
-    const classLabels = Object.keys(classGroups);
-    const classAverages = classLabels.map(c =>
-      Math.round(classGroups[c].reduce((a, b) => a + b, 0) / classGroups[c].length)
-    );
-
-    const classCtx = document.getElementById("classAvgChart").getContext("2d");
-    new Chart(classCtx, {
-      type: "bar",
-      data: {
-        labels: classLabels,
-        datasets: [{
-          label: "Average Combat Power",
-          data: classAverages,
-          backgroundColor: "rgba(59,130,246,0.6)",
-          borderColor: "#3b82f6",
-          borderWidth: 2,
-          borderRadius: 8
-        }]
-      },
-      options: {
-        responsive: true,
-        plugins: { legend: { display: false } },
-        scales: {
-          y: { beginAtZero: true, grid: { color: "rgba(255,255,255,0.1)" } },
-          x: { grid: { color: "rgba(255,255,255,0.1)" } }
-        }
-      }
-    });
-
-    // ----- Guild Weekly Growth (Last 4 Weeks) -----
-    const weekLabelsSet = new Set();
-    const weekTotals = {};
-
-    members.forEach(m => {
-      (m.weeklyCP || []).forEach(w => {
-        weekLabelsSet.add(w.week);
-        if (!weekTotals[w.week]) weekTotals[w.week] = 0;
-        weekTotals[w.week] += w.cp || 0;
+      // ----- Class Average CP -----
+      const classGroups = {};
+      members.forEach(m => {
+        if (!classGroups[m.class]) classGroups[m.class] = [];
+        classGroups[m.class].push(m.cp || 0);
       });
-    });
 
-    const weekLabels = Array.from(weekLabelsSet).sort(); // sorted chronologically
-    const weeklyValues = weekLabels.map(week => Math.round((weekTotals[week] || 0) / members.length));
+      const classLabels = Object.keys(classGroups);
+      const classAverages = classLabels.map(c =>
+        Math.round(classGroups[c].reduce((a, b) => a + b, 0) / classGroups[c].length)
+      );
 
-    const weeklyCtx = document.getElementById("weeklyGrowthChart").getContext("2d");
-    new Chart(weeklyCtx, {
-      type: "line",
-      data: {
-        labels: weekLabels,
-        datasets: [{
-          label: "Average CP Growth",
-          data: weeklyValues,
-          borderColor: "#10b981",
-          backgroundColor: "rgba(16,185,129,0.15)",
-          tension: 0.4,
-          fill: true
-        }]
-      },
-      options: {
-        responsive: true,
-        plugins: { legend: { display: false } },
-        scales: {
-          y: { beginAtZero: false, grid: { color: "rgba(255,255,255,0.1)" } },
-          x: { grid: { color: "rgba(255,255,255,0.1)" } }
+      const classCtx = document.getElementById("classAvgChart").getContext("2d");
+      new Chart(classCtx, {
+        type: "bar",
+        data: {
+          labels: classLabels,
+          datasets: [{
+            label: "Average Combat Power",
+            data: classAverages,
+            backgroundColor: "rgba(59,130,246,0.6)",
+            borderColor: "#3b82f6",
+            borderWidth: 2,
+            borderRadius: 8
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: { legend: { display: false } },
+          scales: {
+            y: { beginAtZero: true, grid: { color: "rgba(255,255,255,0.1)" } },
+            x: { grid: { color: "rgba(255,255,255,0.1)" } }
+          }
         }
-      }
-    });
-  }
+      });
 
-  // Load analytics after leaderboard loads
-  setTimeout(loadAnalytics, 2000);
-</script>
+      // ----- Guild Weekly Growth -----
+      const weekLabels = [];
+      const weekTotals = {};
+
+      members.forEach(m => {
+        (m.weeklyCP || []).forEach(w => {
+          if (!weekTotals[w.week]) weekTotals[w.week] = 0;
+          weekTotals[w.week] += w.cp || 0;
+        });
+      });
+
+      Object.keys(weekTotals).sort().forEach(week => {
+        weekLabels.push(week);
+      });
+
+      const weeklyValues = weekLabels.map(week => weekTotals[week] / members.length);
+
+      const weeklyCtx = document.getElementById("weeklyGrowthChart").getContext("2d");
+      new Chart(weeklyCtx, {
+        type: "line",
+        data: {
+          labels: weekLabels,
+          datasets: [{
+            label: "Average CP Growth",
+            data: weeklyValues,
+            borderColor: "#10b981",
+            backgroundColor: "rgba(16,185,129,0.15)",
+            tension: 0.4,
+            fill: true
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: { legend: { display: false } },
+          scales: {
+            y: { beginAtZero: false, grid: { color: "rgba(255,255,255,0.1)" } },
+            x: { grid: { color: "rgba(255,255,255,0.1)" } }
+          }
+        }
+      });
+    }
+
+    // Call analytics after leaderboard loads
+    setTimeout(loadAnalytics, 2000);
+  </script>
 </body>
 </html>
