--- a/leaderboards.html
+++ b/leaderboards.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guild Leaderboards - GuildPower Tracker Pro</title>
+  <title>Guild Leaderboards - GuildPower Tracker</title>
   <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -37,7 +37,7 @@
     <div class="flex items-center space-x-2">
       <a href="index.html" class="flex items-center space-x-2">
         <i data-feather="arrow-left" class="text-yellow-400"></i>
-        <h1 class="text-xl medieval-font">GuildPower Tracker Pro</h1>
+        <h1 class="text-xl medieval-font">GuildPower Tracker</h1>
       </a>
     </div>
   </nav>
@@ -214,7 +214,7 @@
       </div>
 
       <div class="bg-gray-800 rounded-xl p-6 shadow-lg">
-        <h3 class="text-2xl font-bold mb-6">Guild Weekly CP Growth (Last 4 Weeks)</h3>
+        <h3 class="text-2xl font-bold mb-6">Guild monthly CP Growth</h3>
         <div class="h-96">
           <canvas id="weeklyGrowthChart"></canvas>
         </div>
