--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GuildPower Tracker</title>
+  <title>GuildPower</title>
   <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -28,7 +28,7 @@
   <nav class="bg-gray-800 py-4 px-6 flex justify-between items-center sticky top-0 z-50 shadow-lg">
     <div class="flex items-center space-x-2">
       <i data-feather="shield" class="text-yellow-400"></i>
-      <h1 class="text-xl medieval-font">Guild Power Tracker</h1>
+      <h1 class="text-xl medieval-font">Guild Power</h1>
     </div>
     <div class="hidden md:flex space-x-6">
       <a href="#dashboard" class="hover:text-yellow-400 transition-colors">Dashboard</a>
